# sik_player

./: CMakeLists.txt  Makefile  README.md  commands  common.c  common.h  master.c  master.h  master_commands.c  master_initialize.c  master_parse.c  master_player_list.c  master_ssh.c  master_telnet.c  master_telnet_list.c  player.c  player.h  player_initialize.c  player_local.c  player_network.c  player_parse.c  test.in
libs/: common.c  common.h
master/: master.c  master.h  master_commands.c  master_initialize.c  master_parse.c  master_player_list.c  master_ssh.c  master_telnet.c  master_telnet_list.c  master_time.c
player/: player.c  player.h  player_initizalize.c  player_local.c  player_network.c  player_parse.c
